--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,10 +12,10 @@
         <h1>Groovy</h1>
         <p>기록 저장소</p>
     </header>
-    <form id="signup-form">
+    <form id="signup-form" method="post">
         <input type="text" class="sign-in" placeholder="ID">
         <input type="password" class="sign-in" placeholder="Password">
-        <input type="button" id="login-btn" value="Login">
+        <input type="submit" id="login-btn" value="Login">
     </form>
 </div>
 <div id="bg">
