--- a/src/main/resources/templates/common/nav.html
+++ b/src/main/resources/templates/common/nav.html
@@ -1,7 +1,7 @@
 <div class="header">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Groovy</a>
+            <a class="navbar-brand" href="/groovy/home">Groovy</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
